# aws-eks-secure-delivery-detection-lab

./: .gitignore  ARCHITECTURE.md  CONTROLS_MATRIX.md  COST_AND_CLEANUP.md  EVIDENCE_SUMMARY.md  LESSONS_LEARNED.md  Makefile  PORTFOLIO_CASE_STUDY.md  PORTFOLIO_REVIEW_GUIDE.md  PROJECT_BRIEF.md  README.md  SECURITY_NOTES.md  THREAT_MODEL.md  agents.md  aws_eks_secure_delivery_detection_lab_complete_design_doc.md  scaffold.ps1  skill.md
.github/: dependabot.yml
.github/workflows/: ci-pipeline.yml  deploy-dev.yml  destroy-dev.yml  pr-security-checks.yml  terraform-plan.yml
app/: Dockerfile  pyproject.toml
app/src/: main.py
app/tests/: test_health.py
evidence/: README.md
evidence/checkov-before-after/: README.md
evidence/eventbridge-routing/: README.md  lambda-sns-routing-evidence.md
evidence/guardduty-findings/: README.md  sample-finding-evidence.md
evidence/kyverno-policy-results/: README.md
evidence/runbook-walkthrough/: README.md
evidence/screenshots/: README.md
evidence/securityhub-controls/: README.md
evidence/trivy-before-after/: README.md
kubernetes/: deployment.yaml  hardened-deployment.yaml  ingress.yaml  insecure-deployment.yaml  install-kyverno.sh  namespace.yaml  network-policy.yaml  service-account.yaml  service.yaml
lambda/guardduty_finding_router/: handler.py  (+1 more)
policies/: disallow-privileged-containers.yaml  require-resource-limits.yaml
runbooks/: ci-supply-chain-incident-response.md  guardduty-eks-finding-triage.md  privileged-pod-response.md  vulnerable-image-response.md
terraform/: main.tf  providers.tf  variables.tf
(+34 files in other folders)
